--- a/docker-compose-mpnet.yml
+++ b/docker-compose-mpnet.yml
@@ -1,7 +1,7 @@
 services:
-  arxiv-sent2vec:
+  arxiv-sent2vec-mpnet:
     build: .
-    container_name: arxiv-sent2vec
+    container_name: arxiv-sent2vec-mpnet
     volumes:
       - ./logs:/app/logs
     restart: unless-stopped
